fixes for Discord latest breaking changes

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colyseus + Discord (Vite + TS)</title>
+
+    <!--
+      The JavaScript code below dynamically set ".proxy/" as base url.
+      This is meant to allow testing the app both locally and on from the Discord Activity iframe.
+
+      If you're making a specific build for Discord Activities, you can use the tag directly instead:
+
+        <base href=".proxy" />
+    -->
+    <script type="text/javascript">
+      if (window.location.href.includes(".discordsays.com")) {
+        document.write('<base href=".proxy/" />');
+      }
+    </script>
+    <!-- / -->
+
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
